tests/parse_print/issues/363/2/stderr.expected
Error:
    tests/parse_print/issues/363/2/363_2.essence:2:29:
unexpected union
expecting end of input, rest of statement, or statement
    find S : set of int(-10..0) union int(0..10)
                                ^